--- a/src/Components/Monu/Home/Products.css
+++ b/src/Components/Monu/Home/Products.css
@@ -55,6 +55,14 @@ p {
     margin: 15px 0 20px 0;
 }
 
+.Mdiv:hover{
+
+    cursor: pointer;
+    background-color: #DE6737;
+    
+}
+
+
 .section-p1 {
     padding: 40px 80px;
 }
