--- a/src/Components/Chetan/ProductPage.module.css
+++ b/src/Components/Chetan/ProductPage.module.css
@@ -14,16 +14,17 @@
 }
 .card{
     /* border: solid red 1px; */
-    box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.04);
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
     width: 250px;
     margin: 20px;
+    border-radius: 20px;
     padding: 2px;
     justify-content: center;
     align-content: center;
 }
 
 .card>img{
-    width: 100%;
+    max-width: 100%;
     height: 300px;
     padding: 2px;
     margin: auto;
@@ -54,4 +55,19 @@
 .detail{
     display: flex;
     justify-content: space-around;
+}
+.card:hover{
+   cursor: pointer;
+   transform: scale(1.02);
+}
+.btn:hover{
+    transform: scale(1.05);
+}
+.filterList{
+    border: none;
+    /* appearance: none; */
+    padding: 3px;
+    background-color: #de6737;
+    color: white;
+    border-radius: 5px;
 }
